Bug 1902333 - Fix crash when serializing empty shadow tree. r=smaug,dom-core,peterv

Differential Revision: https://phabricator.services.mozilla.com/D213628